# smartbugs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  diff.py  pyproject.toml  q  reparse  reparse.py  reparse.sh  requirements-3.8.10.txt  requirements-3.8.txt  requirements.txt  results2csv  results2csv.py  runAllButSolidiFI.sh  run_ccc.sh  run_smartBugs.sh  run_smartBugs_all.sh  setup-venv.sh  setup.sh  site_cfg.yaml  smartBugs.py  smartbugs
.github/: github_results.sh  install_docker_on_macos.sh  results-macos.csv  results-ubuntu-hx.csv  results-ubuntu-rt.csv  results-ubuntu-sol.csv  results-ubuntu.csv  sample.csv  samples.csv  ubuntu.yml
.github.off/: results-ubuntu-sol.csv
.github/ISSUE_TEMPLATE/: bug_report.md
.github/old/: results-ubuntu.csv  ubuntu.yml
.github/sample/: insecure_transfer.rt.hex  unchecked_return_value.sol  xxx
.github/workflows/: build.yml  macos.yml  main.yml  smartbugs-test.yml  ubuntu.yml
config/: datasets.yaml
config/dataset/: dataset.yaml
config/tools/: conkas.yaml  easyflow.yaml  ethainter.yaml  ethbmc.yaml  ethor.yaml  honeybadger.yaml  madmax.yaml  maian.yaml  manticore.yaml  mythril.yaml  osiris.yaml  oyente.yaml  pakala.yaml  securify.yaml  slither.yaml  smartcheck-extended.yaml  smartcheck.yaml  solhint.yaml  teether.yaml  vandal.yaml
dataset/: ICSE2020_curated_69.txt  README.md  vulnerabilities.csv  vulnerabilities.json  vulnerabilities_mapping.csv
dataset/access_control/: FibonacciBalance.csv  README.md  WalletLibrary.sol  arbitrary_location_write_simple.csv  arbitrary_location_write_simple.rt.hex  arbitrary_location_write_simple.sol  crypto_roulette.sol  incorrect_constructor.sol  incorrect_constructor_name1.csv  incorrect_constructor_name1.rt.hex  incorrect_constructor_name1.sol  incorrect_constructor_name2.csv  incorrect_constructor_name2.sol  incorrect_constructor_name3.csv  incorrect_constructor_name3.rt.hex  incorrect_constructor_name3.sol  mapping_write.csv  mapping_write.rt.hex  mapping_write.sol  multiowned_vulnerable.csv  multiowned_vulnerable.rt.hex  multiowned_vulnerable.sol  mycontract.csv  mycontract.rt.hex  mycontract.sol  parity_wallet_bug_1.csv  parity_wallet_bug_1.rt.hex  parity_wallet_bug_1.sol  parity_wallet_bug_2.csv  parity_wallet_bug_2.rt.hex  parity_wallet_bug_2.sol  parity_wallet_library.sol  phishable.csv  phishable.rt.hex  phishable.sol  proxy.csv  proxy.rt.hex  proxy.sol  requirement_simple.sol  rubixi.csv  (+19 more)
dataset/arithmetic/: BECToken.csv  BECToken.rt.hex  BECToken.sol  README.md  arbitrary_location_write_simple.sol  batch_overflow.sol  insecure_transfer.csv  insecure_transfer.rt.hex  insecure_transfer.sol  integer_overflow_1.csv  integer_overflow_1.rt.hex  integer_overflow_1.sol  integer_overflow_add.csv  integer_overflow_add.rt.hex  integer_overflow_add.sol  integer_overflow_benign_1.csv  integer_overflow_benign_1.rt.hex  integer_overflow_benign_1.sol  integer_overflow_mapping_sym_1.csv  integer_overflow_mapping_sym_1.rt.hex  integer_overflow_mapping_sym_1.sol  integer_overflow_minimal.csv  integer_overflow_minimal.sol  integer_overflow_mul.csv  integer_overflow_mul.rt.hex  integer_overflow_mul.sol  integer_overflow_multitx_multifunc_feasible.csv  integer_overflow_multitx_multifunc_feasible.rt.hex  integer_overflow_multitx_multifunc_feasible.sol  integer_overflow_multitx_onefunc_feasible.csv  integer_overflow_multitx_onefunc_feasible.rt.hex  integer_overflow_multitx_onefunc_feasible.sol  merde_token.sol  overflow_simple_add.csv  overflow_simple_add.rt.hex  overflow_simple_add.sol  overflow_single_tx.csv  overflow_single_tx.rt.hex  overflow_single_tx.sol  timelock.csv  (+7 more)
dataset/bad_randomness/: README.md  blackjack.csv  blackjack.rt.hex  blackjack.sol  etheraffle.csv  etheraffle.rt.hex  etheraffle.sol  guess_the_random_number.csv  guess_the_random_number.sol  lottery.csv  lottery.rt.hex  lottery.sol  lucky_doubler.csv  lucky_doubler.rt.hex  lucky_doubler.sol  old_blockhash.csv  old_blockhash.rt.hex  old_blockhash.sol  random_number_generator.csv  random_number_generator.sol  smart_billions.csv  smart_billions.rt.hex  smart_billions.sol  the_run.sol
dataset_function/: results_curated.json  vulnerabilities_mapping.csv.orig
doc/: academia.md  datasets.md  installation.md  usage.md
install/: docker_test.py  requirements-3.10.txt  requirements-3.11.txt  requirements-3.12.txt  requirements-3.6.txt  requirements-3.7.txt  requirements-3.8.txt  requirements-3.9.txt  setup-venv.sh
local-env/: pyvenv.cfg
results/: 20220419_1013.sarif  20220429_1009.sarif  20220429_1327.sarif  20220503_1112.sarif  20220503_1809.sarif  20220503_1909.sarif  20220504_1147.sarif  20220505_1002.sarif  20220506_1010.sarif  20220506_1623.sarif  20220506_1849.sarif  20220506_1952.sarif  20220506_2046.sarif
samples/: BECToken.hex  BecToken.rt.hex  MyToken.hex  OpenAddressLottery.rt.hex  README.md  Rubixi.rt.hex  SimpleDAO.hex  ether_lotto.rt.hex  list_dos.hex  open_address_lottery.hex  rubixi.hex  short_address_example.rt.hex  unchecked_return_value.hex  unchecked_return_value.rt.hex  vulnerabilities.json  vulnerabilities.json~
sb/: __main__.py  analysis.py  cfg.py  cli.py  colors.py  config.py  debug.py  docker.py  errors.py  io.py  logging.py  parse_utils.py  parser.py  parsing.py  reparse.py  results2csv.py  sarif.py  semantic_version.py  settings.py  smartbugs.py  solc.py  solidity.py  tasks.py  tools.py  utils.py
scripts/: get_runtime_bytecode.py  parse_results.py
solc_select/: __main__.py  constants.py  exceptions.py  platform_capabilities.py  repositories.py  repository_registry.py  solc_select.py  utils.py
solcx/: __init__.py  exceptions.py  install.py  main.py  wrapper.py
src/: cli.py  colors.py  config.py  docker_api.py  get_solc.py  logger.py  logging.py  parse_result.py  parsing.py  shared.py  solidity.py  tools.py  utils.py
templates/: results.sql
test1/: FibonacciBalance.hex  FibonacciBalance.rt.hex  FibonacciBalance.sol
test2/: insecure_transfer.hex  insecure_transfer.sol
tests/: README.md  __init__.py  conftest.py  coverage.sh  diff.sh  run.sh
unittest/: TestModule.py
(+15085 files in other folders)
